[package]
name = "grrs"
description = "A simple program to search files for a given pattern"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.60"
terminal_size = "0.2.1"
ansi_term = "0.12.1"
regex = "1.6.0"